# profiles

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_.py
profiles/: main.py  settings.py  settings_models.py
profiles/api/: app.py  deps.py  errors.py
profiles/api/routers/: dto.py  meta.py
profiles/api/routers/profiles/: __init__.py  create.py  get_one.py
