[tool.poetry]
name = "profiles"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Backend Team <backend@docet.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.x"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
pydantic = { extras = ["email"], version = "^2.5.2" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
loguru = "^0.7.2"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# See definitions https://docs.astral.sh/ruff/rules/
select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    #    "TD",    # flake8-todos
]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
# Ignore `E401` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E401"]

[tool.ruff.flake8-bugbear]
# Allow FastAPI's dependency annotations
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env_files = ["tests/.env.pytest"]
markers = ["integration: marks test as an integration"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
